--- a/.github/workflows/build_lint.yml
+++ b/.github/workflows/build_lint.yml
@@ -29,7 +29,7 @@ jobs:
           targets: ${{ matrix.os-target.target }}
       - uses: Swatinem/rust-cache@v2
       - name: Install aarch64-unknown-linux-gnu requisites
-        run: sudo apt-get install g++-aarch64-linux-gnu -y
+        run: sudo apt update && sudo apt-get install g++-aarch64-linux-gnu -y
         if: matrix.os-target.target == 'aarch64-unknown-linux-gnu'
       - name: Run trag-track
         run: cargo run -- --create-tag
