--- a/.github/workflows/build_lint.yml
+++ b/.github/workflows/build_lint.yml
@@ -31,7 +31,7 @@ jobs:
           targets: ${{ matrix.os-target.target }}
       - uses: Swatinem/rust-cache@v2
       - name: Install aarch64-unknown-linux-gnu requisites
-        run: sudo apt update && sudo apt-get install -y g++-aarch64-linux-gnu libssl-dev
+        run: sudo apt update && sudo apt-get install -y g++-aarch64-linux-gnu
         if: matrix.os-target.target == 'aarch64-unknown-linux-gnu'
       - name: Run trag-track
         run: cargo run -- --create-tag --github-repo dloez/tag-track --github-token ${{ github.token }}
