--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ regex = "1.9.1"
 reqwest = { version = "0.11.18", features = ["json", "blocking", "native-tls-vendored"] }
 semver = "1.0.18"
 serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.104"
