--- a/.github/workflows/build_lint.yml
+++ b/.github/workflows/build_lint.yml
@@ -4,13 +4,6 @@ on:
     branches:
       - main
   workflow_call:
-    inputs:
-      push-tags:
-        type: boolean
-        description: |
-          Control if created tags by `tag-track` need to be pushed.
-        required: true
-        default: false
 jobs:
   build:
     strategy:
@@ -27,10 +20,6 @@ jobs:
     runs-on: ${{ matrix.os-target.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Comfigure git author
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
       - name: Setup rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -41,7 +30,7 @@ jobs:
         run: sudo apt update && sudo apt-get install -y g++-aarch64-linux-gnu
         if: matrix.os-target.target == 'aarch64-unknown-linux-gnu'
       - name: Run trag-track
-        run: cargo run -- --create-tag --github-repo dloez/tag-track --github-token ${{ github.token }}
+        run: cargo run -- --github-repo dloez/tag-track --github-token ${{ github.token }}
       - name: Run cargo build
         run: cargo build --release --target ${{ matrix.os-target.target }}
       - name: Upload artifacts for reuse in release job
@@ -51,9 +40,6 @@ jobs:
           path: ${{ github.workspace }}/target/${{ matrix.os-target.target }}/release/tag-track${{ matrix.os-target.target == 'x86_64-pc-windows-msvc' && '.exe' || '' }}
           if-no-files-found: error
           retention-days: 5
-      - name: Push tags
-        run: git push origin --tags
-        if: ${{ inputs.push-tags == 'true' }}
   lint:
     runs-on: ubuntu-latest
     steps:
