--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -3,12 +3,15 @@ on:
   push:
     branches:
       - main
+permissions:
+  contents: write
 jobs:
   call-build_lint:
     uses: ./.github/workflows/build_lint.yml
     secrets: inherit
   create_tag:
     runs-on: ubuntu-latest
+    needs: call-build_lint
     steps:
       - uses: actions/checkout@v3
       - name: Configure git author
