ci: add output-format to tag-track calls

--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run trag-track
         id: tag-track
         run: |
-          output=$(cargo run -- --create-tag --github-repo dloez/tag-track --github-token ${{ github.token }})
+          output=$(cargo run -- --create-tag --github-repo dloez/tag-track --github-token ${{ github.token }} --output-format json)
           echo "created_tag=$(echo $output | jq '.created_tag')" >> $GITHUB_OUTPUT
           echo "new_version=$(echo $output | jq '.new_version')" >> $GITHUB_OUTPUT
       - name: Push tags
