ci: add debug information

--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -33,6 +33,9 @@ jobs:
           output=$(cargo run -- --create-tag --github-repo dloez/tag-track --github-token ${{ github.token }} --output-format json)
           echo "created_tag=$(echo $output | jq '.created_tag')" >> $GITHUB_OUTPUT
           echo "new_version=$(echo $output | jq '.new_version')" >> $GITHUB_OUTPUT
+      - run: |
+          echo ${{ steps.tag-track.outputs.created_tag }}
+          echo ${{ steps.tag-track.outputs.new_version }}
       - name: Push tags
         run: git push origin --tags
   release:
