ci: pass arguments to jq calls to give output as text

--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -31,8 +31,8 @@ jobs:
         id: tag-track
         run: |
           output=$(cargo run -- --create-tag --github-repo dloez/tag-track --github-token ${{ github.token }} --output-format json)
-          echo "created_tag=$(echo $output | jq '.created_tag')" >> $GITHUB_OUTPUT
-          echo "new_version=$(echo $output | jq '.new_version')" >> $GITHUB_OUTPUT
+          echo "created_tag=$(echo $output | jq -r '.created_tag')" >> $GITHUB_OUTPUT
+          echo "new_version=$(echo $output | jq -r '.new_version')" >> $GITHUB_OUTPUT
       - run: |
           echo ${{ steps.tag-track.outputs.created_tag }}
           echo ${{ steps.tag-track.outputs.new_version }}
