--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ reqwest = { version = "0.11.18", features = ["json", "blocking", "native-tls-ven
 semver = "1.0.18"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
+serde_yaml = "0.9.25"
