ci: use composite action to be able to use github context

--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'Tag Track'
 description: 'Calculate semantic version bump based on conventional commits'
 author: 'David Lopez <davidlopez.hellin@outlook.com>'
-
 runs:
-  using: node20
-  main: dist/index.js
+  using: composite
+  steps:
+    - run: echo "${{ github.action-ref }}"
