ci: use `github.context.ref`

--- a/action.yml
+++ b/action.yml
@@ -2,9 +2,5 @@ name: 'Tag Track'
 description: 'Calculate semantic version bump based on conventional commits'
 author: 'David Lopez <davidlopez.hellin@outlook.com>'
 runs:
-  env:
-    ACTION_REF: ${{ github.action_ref }}
-  using: composite
-  steps:
-    - run: echo ${{ env.ACTION_REF }}
-      shell: bash
+  using: node20
+  main: dist/index.js
