--- a/action.yml
+++ b/action.yml
@@ -9,4 +9,4 @@ runs:
       run: curl https://raw.githubusercontent.com/dloez/tag-track/0.8.0/install.sh | sh -s 0.8.0
     - name: Calculate version bump
       shell: bash
-      run: $HOME/.tag-track/tag-track/bin/tag-track --github-repo dloez/tag-track
+      run: $HOME/.tag-track/bin/tag-track --github-repo dloez/tag-track
