--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,24 @@
 name: Tag Track
 description: Calculate semantic version bump based on conventional commits
 author: David Lopez <davidlopez.hellin@outlook.com>
+inputs:
+  create-tag:
+    description: Create new tag with bumped version, if true, the tag will be also pushed.
+    required: false
+    default: false
+  github-repo:
+    description: Github repository in the format owner/repo, defaults to the repository that triggers the action.
+    required: false
+    defaults: ${{ github.repository }}
+  github-token:
+    description: Github token to authorize requests to GitHub REST API. Can cause rate limit to be increased. Required if `create-tag` is used.
+    required: false
+  commit-sha:
+    description: Commit SHA from where the version bump will be calculated, defaults to the commit that triggers the action.
+    required: false
+  test:
+    required: false
+    default: ${{ github.action_ref }}
 runs:
   using: composite
   steps:
@@ -9,4 +27,7 @@ runs:
       run: curl https://raw.githubusercontent.com/dloez/tag-track/0.8.0/install.sh | sh -s 0.8.0
     - name: Calculate version bump
       shell: bash
-      run: $HOME/.tag-track/bin/tag-track --github-repo dloez/tag-track
+      run: $HOME/.tag-track/bin/tag-track --github-repo dloez/tag-track --output-format json
+    - name: Print all inputs
+      shell: bash
+      run: echo ${{ inputs }}
