--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,12 @@
     "editor.tabSize": 2
   },
 
+  "[yaml]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 2
+  },
+
   "[rust]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "rust-lang.rust-analyzer"
