--- a/.github/workflows/research.yml
+++ b/.github/workflows/research.yml
@@ -8,4 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      # - name: Configure git author
+      #   run: |
+      #     git config user.name github-actions
+      #     git config user.email github-actions@github.com
       - uses: dloez/tag-track@github-action-research
