--- a/.github/workflows/research.yml
+++ b/.github/workflows/research.yml
@@ -13,3 +13,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
       - uses: dloez/tag-track@github-action-research
+        with:
+          compile: true
