--- a/action.yml
+++ b/action.yml
@@ -65,7 +65,7 @@ runs:
       id: gen-compile-cache-key
       shell: bash
       run: echo "compile-cache-key=tag_track-compile-${{ hashFiles('tag-track-repo/**.rs', 'tag-track-repo/.cargo/**', 'tag-track-repo/Cargo*') }}" >> $GITHUB_OUTPUT
-    - name: Restore cache
+    - name: Restore compile cache
       if: ${{ inputs.compile == 'true' && inputs.useCache == 'true' }}
       id: compile-cache-restore
       uses: actions/cache/restore@v3
@@ -92,13 +92,31 @@ runs:
       with:
         path: tag-track-bin
         key: ${{ steps.gen-compile-cache-key.outputs.compile-cache-key }}
+    - name: Generate download cache key
+      if: ${{ inputs.compile == 'false' && inputs.useCache == 'true' }}
+      id: gen-download-cache-key
+      shell: bash
+      run: echo "download-cache-key=tag_track-download-${{ steps.action-ref-generator.outputs.action-ref }}" >> $GITHUB_OUTPUT
+    - name: Restore download cache
+      if: ${{ inputs.compile == 'false' && inputs.useCache == 'true' }}
+      id: download-cache-restore
+      uses: actions/cache/restore@v3
+      with:
+        path: tag-track-bin
+        key: ${{ steps.gen-download-cache-key.outputs.download-cache-key }}
     - name: Download Tag Track
-      if: ${{ inputs.compile == 'false' }}
+      if: ${{ inputs.compile == 'false' && steps.download-cache-restore.outputs.cache-hit != 'true' }}
       shell: bash
       run: |
         curl https://raw.githubusercontent.com/dloez/tag-track/${{ steps.action-ref-generator.outputs.action-ref }}/install.sh | sh -s 0.8.0
         mkdir -p tag-track-bin
         mv $HOME/.tag-track/bin/tag-track ./tag-track-bin/tag-track
+    - name: Save cache
+      if: ${{ inputs.compile == 'false' && inputs.useCache == 'true' && steps.download-cache-restore.outputs.cache-hit != 'true' }}
+      uses: actions/cache/save@v3
+      with:
+        path: tag-track-bin
+        key: ${{ steps.gen-download-cache-key.outputs.download-cache-key }}
     - name: Calculate version bump
       id: tag-track-runner
       shell: bash
